# Qt

./: .gitignore  QUICKSTART.md  README.md  _codeql_detected_source_root  face.pro  index.js  mainwindow.cpp  mainwindow.ui
SomeoneNotifier/: SomeoneNotifier.pro  main.cpp  (+2 more)
face/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  OPENCV_QUICK_FIX.md  README.md  WINDOWS_SETUP.md  WINDOWS_SETUP_CN.md  download_models.bat  download_models.sh  face.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
face/.qtc_clangd/: compile_commands.json
face/.qtc_clangd/.cache/clangd/index/: affine.hpp.2D560CEF94562A85.idx  any.h.C3B7379C97660A9A.idx  aruco_board.hpp.932C0C3BCF8A2609.idx  aruco_detector.hpp.E3EC5AFE37441E68.idx  aruco_dictionary.hpp.E39ED9A2B14D5069.idx  async.hpp.ECC3780E0B483447.idx  autotuned_index.h.A5EC38A6814E7E49.idx  background_segm.hpp.14E923C94942D368.idx  barcode.hpp.8FF7E144245FB63F.idx  base.hpp.668B77A9DCB1F345.idx  blenders.hpp.F6290CA2F6B8929D.idx  calib3d.hpp.00684452EA5F833C.idx  camera.hpp.878883BA383A41F6.idx  charuco_detector.hpp.2A64C071E80C809A.idx  check.hpp.57DFE4D357FC89F9.idx  composite_index.h.5A0F257B1FF35B37.idx  core.hpp.E2C907E9424F77BF.idx  cuda.hpp.054FB6B50535EAAB.idx  cuda.inl.hpp.F6BD750633F650C7.idx  cuda_types.hpp.60585322D5FA6F47.idx  cv_cpu_dispatch.h.7FC86BBD2304D6FC.idx  cvdef.h.C35D907055419873.idx  cvstd.hpp.B049A18F736F72C5.idx  cvstd_wrapper.hpp.46F00AA1664CBAED.idx  detection_based_tracker.hpp.B7FAE892FDF4F4E4.idx  dict.hpp.BD750D9995538F4B.idx  dist.h.7F405C0F536544AA.idx  dnn.hpp.BD7B0A24C76F627F.idx  dnn.inl.hpp.79739F67FBC7C876.idx  exposure_compensate.hpp.113025EC2F17E6D5.idx  face.hpp.EFA585B17B4F3C07.idx  fast_math.hpp.3940CFDC5939BBD2.idx  features2d.hpp.469188CA82C6F0D1.idx  flann.hpp.6E690F7BFE39016F.idx  flann_base.hpp.43AA6A4DD8C99187.idx  fs_path.h.CF67D7E30EA3ED82.idx  graphical_code_detector.hpp.17DD0C59D6975A2A.idx  heap.h.F2172D597B786E21.idx  hierarchical_clustering_index.h.2694059D56D1EE83.idx  highgui.hpp.94EDB0816EFCDE32.idx  (+67 more)
face/_build/: CMakeCache.txt
(+7 files in other folders)
